[tool.poetry]
name = "reporter"
version = "0.0.1"
description = "Interactive HTML reports from python"
readme = "README.md"
authors = [
    "Alexander Engels <alexander.engels@dak.de>"
]
license = "Proprietary"
repository = "https://github.com/aengels-git/reporter"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"
matplotlib = "^3.5.2"
seaborn = "~0.12.2"
pandas = "^1.3.0" 

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.1"

[tool.poetry.group.dev.dependencies]
prep = {git = "https://github.com/aengels-git/prep.git"}
visualize = {git = "https://github.com/aengels-git/visualize.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
